--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -22,18 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 95,
    "id": "b0058823",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\giann\\AppData\\Local\\Temp\\ipykernel_24164\\805898049.py:31: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  data_all = yf.download(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -264,7 +256,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +297,8 @@
     "    start=\"2015-01-01\",\n",
     "    end=\"2025-01-01\",\n",
     "    interval=\"1d\",\n",
-    "    progress=False\n",
+    "    progress=False,\n",
+    "    auto_adjust=True\n",
     ")[\"Close\"]\n",
     "\n",
     "data_all = data_all.dropna()  # drop rows with missing values\n",
